add_executable(ProducerConsumerTests producer_consumer_test.cxx)
target_link_libraries(ProducerConsumerTests StormByte)
add_test(NAME ProducerConsumerTests COMMAND ProducerConsumerTests)

add_executable(SharedBufferTests shared_buffer_test.cxx)
target_link_libraries(SharedBufferTests StormByte)
add_test(NAME SharedBufferTests COMMAND SharedBufferTests)

add_executable(SimpleBufferTests simple_buffer_test.cxx)
target_link_libraries(SimpleBufferTests StormByte)
add_test(NAME SimpleBufferTests COMMAND SimpleBufferTests)